--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,13 +1,19 @@
 <html>
 	<head>
-		<title>To-Do lists</title>
+		<title>Homepage</title>
 	</head>
 	<body>
+        <h4>The name's Benny.</h4>
+        <h1 id="name">Benny William Pardede</h1>
+        <p id="alias">But they usually call me the <strong>trequartista</strong></p>
+        <p id="npm">- 1606917550</p>
+
 		<h1>Your To-Do list</h1>
 		<form method="POST">
             <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
             {% csrf_token %}
         </form>
+        <h5 id="motivation_comment"><i> {{ motivation_comment }}</i></h5>
 		<table id="id_list_table">
             {% for item in items %}
                 <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
