--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homepage</title>
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/proper.css" rel="stylesheet">
   </head>
 
     <body>
