--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -20,6 +20,11 @@
                      class="form-control input-lg"
                      placeholder="Enter a to-do item" />
               {% csrf_token %}
+              {% if error %}
+                <div class="form-group has-error">
+                  <span class="help-block">{{ error }}</span>
+                </div>
+              {% endif %}
               </form>
               <h4 id="motivation_comment"><strong><i>{{ motivation_comment }}</i></strong></h4>
             </div>
