--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -14,11 +14,18 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">To-Do</a>
-          <form class="navbar-form navbar-right" method="POST" action="#">
-            <span>Enter email to log in:</span>
-            <input class="form-control" name="email" type="text" />
-            {% csrf_token %}
-          </form>
+          {% if user.is_authenticated %}
+            <ul class="nav navbar-nav navbar-right">
+            <li><p>Logged in as {{ user.email }}</p></li>
+            <li><a id="id_logout" href="{% url 'logout' %}">Log out</a></li>
+            </ul>
+          {% else %}
+            <form class="navbar-form navbar-right" method="POST" action ="{% url 'send_login_email' %}">
+              <span>Enter email to log in:</span>
+              <input class="form-control" name="email" type="text" />
+              {% csrf_token %}
+            </form>
+          {% endif %}
         </div>
       </nav>
 
