--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -14,13 +14,13 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">To-Do</a>
-          {% if user.is_authenticated %}
+          {% if user.email %}
             <ul class="nav navbar-nav navbar-right">
-            <li><p>Logged in as {{ user.email }}</p></li>
-            <li><a id="id_logout" href="{% url 'logout' %}">Log out</a></li>
+              <li class="navbar-text">Logged in as {{ user.email }}</li>
+              <li><a href="#">Log out</a></li>
             </ul>
           {% else %}
-            <form class="navbar-form navbar-right" method="POST" action ="{% url 'send_login_email' %}">
+            <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
               <span>Enter email to log in:</span>
               <input class="form-control" name="email" type="text" />
               {% csrf_token %}
@@ -28,6 +28,21 @@
           {% endif %}
         </div>
       </nav>
+
+      {% if messages %}
+        <div class="row">
+          <div class="col-md-8">
+            {% for message in messages %}
+              {% if message.level_tag == 'success' %}
+                <div class="alert alert-success">{{ message }}</div>
+              {% else %}
+                <div class="alert alert-warning">{{ message }}</div>
+              {% endif %}
+            {% endfor %}
+          </div>
+        </div>
+      {% endif %}
+
 
       <div class="row">
         <div class="col-md-6 col-md-offset-3 jumbotron">
