--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,3 +1,4 @@
+{% load timedelta_utils %}
 <html>
   <head>
     <meta charset="utf-8">
@@ -73,7 +74,11 @@
         <div class="col-md-6 col-md-offset-3">
           <table id="id_list_table" class="table">
             {% for item in items %}
-                <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+                <tr>
+                    <td>{{ forloop.counter }}: </td>
+                    <td>{{ item.text }}</td>
+                    <td>{{ item.creation_time|smother_timedelta }}</td>
+                </tr>
             {% endfor %}
           </table>
         </div>
